# project_1

./: .coverage  .env_template  .flake8  .gitignore  README.md  config.py  main.py  output.json  pyproject.toml
src/: api_data.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_api_data.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
